[package]
name = "dart_async"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "dart_async"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true, features = ["tokio", "cli", "scaffolding-ffi-buffer-fns"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.38.2", features = ["time", "sync"] }
once_cell = "1.18.0"
thiserror = "2"

[build-dependencies]
uniffi = { workspace = true, features = ["build", "scaffolding-ffi-buffer-fns"] }
uniffi-dart = { path = "../../", features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
anyhow = "1"